--- a/main/RealestateScraper.Console/RealestateScraper.Console.csproj
+++ b/main/RealestateScraper.Console/RealestateScraper.Console.csproj
@@ -11,4 +11,13 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\RealestateScraper.Core\RealestateScraper.Core.csproj" />
+    <ProjectReference Include="..\..\src\RealestateScraper.Web.Data\RealestateScraper.Web.Data.csproj" />
+  </ItemGroup>
 </Project>
