--- a/tests/integration/RealestateScraper.Integration/RealestateScraper.Integration.csproj
+++ b/tests/integration/RealestateScraper.Integration/RealestateScraper.Integration.csproj
@@ -5,7 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AdCodicem.SpecFlow.MicrosoftDependencyInjection" Version="1.1.1" />
+    <PackageReference Include="CsvHelper" Version="20.0.0" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.5.14" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\main\RealestateScraper.Console\RealestateScraper.Console.csproj" />
   </ItemGroup>
 
 </Project>
